WEB-1297 Offset footer by the same height as the flourish to prevent flourish getting cut off

--- a/assets/styles/components/_flourishes.scss
+++ b/assets/styles/components/_flourishes.scss
@@ -113,7 +113,7 @@ html {
  */
 .show-flourishes .footer-global {
     // add extra margin for the colour flourishes
-    margin-top: 170px;
+    margin-top: 188px;
 
     &:before,
     &:after {
